# Bxpe

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml  debug-build.yml
src/: dllmain.cpp  pch.h
src/client/: Latite.cpp
src/client/event/events/: RendererInitEvent.h
src/client/feature/command/: CommandManager.cpp
src/client/feature/command/commands/: ConfigCommand.cpp  EjectCommand.cpp  HelpCommand.cpp  ScriptCommand.cpp  SetPrefixCommand.cpp  SignCommand.cpp  TestCommand.cpp  ToggleCommand.cpp
src/client/feature/command/script/: JsCommand.cpp
src/client/feature/module/: HUDModule.cpp  Module.h  ModuleManager.cpp  TextModule.cpp
src/client/memory/hook/hooks/: DXHooks.h  MinecraftGameHooks.cpp  OptionHooks.cpp  PacketHooks.cpp  PlayerHooks.cpp  RenderControllerHooks.cpp  ScreenViewHooks.cpp
src/client/screen/: Screen.h
src/client/screen/screens/: ClickGUI.cpp  ClickGUI.h
src/config/: mappings.h
src/core/: hooks.cpp  jvm_wrapper.cpp  jvm_wrapper.h
src/mc/: Addresses.h
src/mc/common/util/: BasicDataOutput.h
src/modules/: module.h  module_manager.cpp
src/modules/combat/: aimassist.cpp  aimassist.h
src/modules/render/: esp.cpp  esp.h
src/render/: esp_renderer.cpp  menu.cpp  menu.h
src/render_jni/: esp_renderer.cpp  esp_renderer.h  menu.cpp  renderer.cpp
src/sdk/: entity.cpp  entity.h  inventory.cpp  inventory.h  minecraft.cpp  minecraft.h  options.cpp  options.h
src/ui/: esp_renderer.cpp  esp_renderer.h  menu.cpp  renderer.cpp
src/util/: DrawContext.cpp  DrawContext.h  DrawUtil3D.cpp  DrawUtil3D.h  Util.h  signature.h
(+52 files in other folders)
